--- a/src/components/cakeControllers/cake-controller.styles.scss
+++ b/src/components/cakeControllers/cake-controller.styles.scss
@@ -1,4 +1,6 @@
-.flavours-container {
+.flavours-container , 
+.fillings-container,
+.toppings-container {
     display: flex;
     overflow: scroll;
     padding: 20px 0;
